@@ -1,3 +1,6 @@
+* Agent Console: When programming calls, do not send campaign ID, phone number,
+  and client name through the URL. Instead, just send the call ID and read the
+  other values from the database. This sidesteps character escaping issues.
 * Hold Time: fix warning on old code path for paging
 * Break Administrator: fix warning on array_fill() when no breaks are defined.
 * Compatibility fix: check if generated HTML for report includes a <form> tag,
